--- a/css/global.css
+++ b/css/global.css
@@ -166,10 +166,6 @@ ul li.leaf {
   color: #3f966b;
   font-weight: bold;
   letter-spacing: .05em;
-  margin-bottom: 11px;
-  position: absolute;
-  text-transform: uppercase;
-  width: 100%;
 }
 
 .pane-node-ding-content-tags .pane-content {
@@ -238,6 +234,7 @@ ul li.leaf {
 }
 
 .pane-node-content {
+  clear: both;
   margin-bottom: 10px;
   overflow: hidden;
 }
@@ -602,6 +599,7 @@ ul li.leaf {
 
 .pane-emusik-playlist {
   background: #fff;
+  clear: both;
   padding: 30px 20px 20px 20px;
 }
 
@@ -676,7 +674,9 @@ ul li.leaf {
   font-weight: bold;
 }
 
-.pane-emusik-playlist table a {
+.pane-emusik-playlist table a,
+.mkdru-result-list .external a,
+.mkdru-results tr:hover .external a {
   background: url(../images/source-icon.png) no-repeat 0 0;
   display: block;
   float: left;
@@ -685,14 +685,95 @@ ul li.leaf {
   width: 17px;
 }
 
-.pane-emusik-playlist table a.bibzoom {
+.mkdru-result-list .external {
+  width: 120px;
+}
+
+.mkdru-result-list .external a {
+  direction: ltr;
+  text-indent: -9000px;
+}
+
+.pane-emusik-playlist table a.bibzoom,
+.mkdru-result-list .external a.bibzoom,
+.mkdru-result-list .external a.bibzoom:hover,
+.mkdru-results tr:hover .external a.bibzoom {
   background-position: -27px 0;
 }
 
-.pane-emusik-playlist table a.wimp {
+.pane-emusik-playlist table a.wimp,
+.mkdru-result-list .external a.wimp,
+.mkdru-result-list .external a.wimp:hover,
+.mkdru-results tr:hover .external a.wimp {
   background-position: -60px 0;
 }
 
-.pane-emusik-playlist table a.spotify {
+.pane-emusik-playlist table a.spotify,
+.mkdru-result-list .external a.spotify,
+.mkdru-result-list .external a.spotify:hover,
+.mkdru-results tr:hover .external a.spotify {
   background-position: -121px 0;
 }
+
+.mkdru-result-list .external a.youtube,
+.mkdru-result-list .external a.youtube:hover,
+.mkdru-results tr:hover .external a.youtube {
+  background-position: -152px 0;
+}
+
+.mkdru-result-list .external a.dbc,
+.mkdru-result-list .external a.dbc:hover,
+.mkdru-results tr:hover .external a.dbc {
+  display: none;
+}
+
+.node-social-icons {
+  float: right;
+}
+
+.pane-node-field-ding-material-type,
+.pane-node-field-ding-article-type,
+.pane-node-field-ding-supplier,
+.pane-node-field-artist-ablum-track,
+.pane-node-field-category,
+.pane-node-ding-content-tags {
+  color: #3f966b;
+  float: left;
+  font-weight: bold;
+  letter-spacing: .05em;
+  margin-right: 5px;
+  text-transform: uppercase;
+  margin-top: 10px;
+}
+
+.pane-node-field-artist-ablum-track,
+.pane-node-field-category,
+.pane-node-ding-content-tags {
+  margin-bottom: 20px;
+}
+
+.node-type-ding-event .pane-node-ding-content-tags {
+  margin: 0;
+  position: absolute;
+  top: 10px;
+  width: 100%;
+}
+
+.page-node.node-type-ding-news .node-ding-news.node {
+  margin: 0;
+}
+
+.pane-node-field-ding-material-type a:after,
+.pane-node-field-ding-article-type a:after,
+.pane-node-field-ding-supplier a:after,
+.pane-node-field-artist-ablum-track a:after,
+.pane-node-field-category a:after,
+.pane-node-ding-content-tags a:after {
+  content: "/";
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
+  margin-left: 5px;
+  width: 10px;
+}
+
