case 2074 - Node summary styles.

--- a/css/global.css
+++ b/css/global.css
@@ -224,10 +224,16 @@ ul li.leaf {
   max-width: 100%;
 }
 
-.nodes .summary {
+.nodes .summary,
+.page-node .node .summary {
   font-size: 1.4em;
   font-weight: bold;
   line-height: 1.3em;
+}
+
+.page-node .node .summary {
+  color: #6c6c6c;
+  letter-spacing: .05em;
 }
 
 .node .author {
