case 2022 - default facet group.

--- a/css/global.css
+++ b/css/global.css
@@ -457,6 +457,10 @@ ul li.leaf {
   margin: 15px;
 }
 
+.region-content .grid-9 .mkdru-facet-section a.active {
+  color: black;
+}
+
 .mkdru-results {
   background: #fff;
   padding: 16px 16px 32px 24px;
@@ -807,6 +811,13 @@ ul li.leaf {
 .mkdru-result-list .external a.youtube:hover,
 .mkdru-results tr:hover .external a.youtube {
   background-position: -152px 0;
+}
+
+.pane-emusik-playlist table a.fm,
+.mkdru-result-list .external a.fm,
+.mkdru-result-list .external a.fm:hover,
+.mkdru-results tr:hover .external a.fm {
+  background-position: -92px 0;
 }
 
 .mkdru-result-list .external a.dbc,
