case-211 - Search header is missing on Editorial search page.

--- a/css/global.css
+++ b/css/global.css
@@ -557,6 +557,10 @@ ul li.leaf {
   padding: 20px;
 }
 
+.page-search-node .mkdru-facet-section {
+  margin-top: 22px;
+}
+
 .page-search-meta .grid-12.region-content .grid-3 {
   padding-top: 39px;
 }
