--- a/css/global.css
+++ b/css/global.css
@@ -1074,8 +1074,7 @@ ul li.leaf {
   clear: both;
 }
 
-.panel-panel > .panel-panel {
-  float: left;
+.front .pane-content {
   padding-bottom: 100000px;
   margin-bottom: -100000px;
   background-color: white;
