case 2127 - Album details padding is removed.

--- a/css/global.css
+++ b/css/global.css
@@ -494,7 +494,7 @@ ul li.leaf {
 }
 
 .mkdru-results > table > thead > tr > th:first-child,
-.mkdru-results > table > tbody > tr > td:first-child {
+.mkdru-results .e-mkdru-result-title {
   padding-left: 15px;
 }
 
