--- a/css/global.css
+++ b/css/global.css
@@ -437,12 +437,14 @@ ul.menu li {
 
 .views-field-field-ding-teaser,
 .page-search-node .search-results p,
-.view-emusik .views-field-field-ding-body {
+.view-emusik .views-field-field-ding-body,
+.view-emusik .views-field-body {
   color: #7c7a74;
 }
 
 .view-emusik .views-field-field-ding-teaser,
-.view-emusik .views-field-field-ding-body {
+.view-emusik .views-field-field-ding-body,
+.view-emusik .views-field-body {
   font-size: 1.4em;
   font-weight: bold;
   line-height: 1.3em;
