--- a/css/global.css
+++ b/css/global.css
@@ -951,10 +951,10 @@ ul.menu li {
   background-position: 0 -48px;
 }
 
-.pane-emusik-playlist table a.last,
-.mkdru-result-list .external a.last,
-.mkdru-result-list .external a.last:hover,
-.mkdru-results tr:hover .external a.last {
+.pane-emusik-playlist table a.fm,
+.mkdru-result-list .external a.fm,
+.mkdru-result-list .external a.fm:hover,
+.mkdru-results tr:hover .external a.fm {
   background-position: 0 -48px;
 }
 
