case 2205 - Added event date and address fields, removed creation date from event llanding page.

--- a/css/global.css
+++ b/css/global.css
@@ -347,6 +347,14 @@ ul.menu li {
   letter-spacing: .05em;
 }
 
+.page-node .node .address {
+  font-size: 1.2em;
+}
+
+.addressfield-container-inline:after {
+  display: inline;
+}
+
 .node .author {
   color: #666;
   font-size: 1.2em;
